# playground

./: .gitignore  LICENSE  README.md
.github/workflows/: build-publish-workflows.yml  dev_cd.yml  prod_cd.yml  test-auto-update.yml
auto-update-test/: file1.text
cairo/hello-cairo/: 15-puzzle.cairo  array_product.cairo
cue-api/0-read-plan/: main.cue  main.go
cue-test/: definition.cue  folding.cue  folding.json  test.cue
delivery-api/: encore.app  go.mod  go.sum
django-clothes-market-api/: .gitignore  Example.postman_collection.json  README.md  manage.py  pyproject.toml
django-clothes-market-api/clothes/: models.py  urls.py  views.py
django-clothes-market-api/clothes/migrations/: 0001_initial.py
django-clothes-market-api/common/: exceptions.py  utils.py
django-clothes-market-api/django_clotes_market_api/: asgi.py  settings.py  urls.py  wsgi.py
go-message/: go.sum  launch-db.sh  launch-redis.sh
grpc-workshop/: go.mod  main.go
lsp-test/: main.cue
neo4j-test/: package-lock.json  package.json  tsconfig.json
nest-todolist/: docker-compose.yaml
nextjs-test/: package.json
productgraph/: README.md  SETUP.md  STEP1.md
rustax/: .gitignore  Cargo.toml  README.md
rustax/v0.3/rustax/: Cargo.toml
searchbook/: .envrc  .eslintrc.js  README.md  jest.config.js  package-lock.json  package.json  tsconfig-eslint.json  tsconfig.json
shell-loader/: README.md
svelte-workshop/: Dockerfile  SUBJECT.md  package-lock.json  package.json  rollup.config.js
test-auto-update/: file2.txt
workshop-mlops/: .gitignore  README.md  loadData.py  network.py  train.py
(+201 files in other folders)
